plugins {
    id 'java-library'
}

group = rootProject.group
version = rootProject.version

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://maven.architectury.dev/' }
    maven { url = 'https://maven.firstdarkdev.xyz/snapshots' }
}

dependencies {
    // LDLib common
    compileOnly "com.lowdragmc.ldlib:ldlib-common-${rootProject.ext.mc_version}:+"
    implementation 'com.google.code.gson:gson:2.10.1'
    compileOnly files("${rootProject.projectDir}/libs/architectury-9.2.9999.jar")

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

sourceSets {
    main {
        java {
            setSrcDirs(['src/main/java'])
            include 'com/netroaki/**'
        }
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
